# PyCactus

./: LICENSE.txt  README.md  README.rst  cactus_ah.html  cactus_grid.html  cactus_gwsignal.html  cactus_scalars.html  fourier_util.html  genindex.html  grid_data.html  index.html  metadatafolder.html  multipoles.html  objects.inv  parfiles.html  py-modindex.html  search.html  searchindex.js  simdir.html  timeseries.html  visualize.html
PostCactus/: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
PostCactus/doc/: Makefile
PostCactus/doc/examples/: vtktst2.py  vtktst4.py
PostCactus/doc/examples/notebooks/: pc_example_1d.ipynb  pc_example_2d.ipynb  pc_example_gw.ipynb  pc_example_intro.ipynb
PostCactus/doc/source/: cactus_ah.rst  cactus_gwsignal.rst  cactus_scalars.rst  conf.py  index.rst  multipoles.rst  visualize.rst
PostCactus/doc/source/examples/basic/: pycactus_example.rst
PostCactus/postcactus/: __init__.py  attr_dict.py  cactus_ah.py  cactus_grid_ascii.py  cactus_grid_h5.py  cactus_grid_omni.py  cactus_gwsignal.py  cactus_multipoles.py  cactus_parfile.py  cactus_scalars.py  cactus_timertree.py  cli_pardiff.py  cli_simsync.py  fourier_util.py  grid_data.py  gw_utils.py  metadatafolder.py  simdir.py  timeseries.py  unitconv.py  visualize.py  viz_colors.py  viz_vtk.py
SimRep/: MANIFEST.in  README.rst  setup.py
SimVideo/: README.rst  setup.py
_sources/: cactus_grid.rst.txt  fourier_util.rst.txt  grid_data.rst.txt  index.rst.txt  metadatafolder.rst.txt  parfiles.rst.txt  simdir.rst.txt  timeseries.rst.txt
(+22 files in other folders)
