[metadata]
name = PostCactus
version = 2.2
description = Read and postprocess CACTUS data
long_description = file: README.txt
author = Wolfgang Kastaun
author_email = physik@fangwolg.de
license = OSI Approved :: MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=2.7
install_requires =
    numpy
    scipy
    tables
    h5py
    matplotlib
    future

[options.entry_points]
console_scripts =
    pardiff = postcactus.cli_pardiff:main
    simsync = postcactus.cli_simsync:main



